--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
     >
-        <activity android:name=".EarthquakeActivity">
+        <activity android:name="com.example.android.quakereport.EarthquakeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.android.quakereport.SettingsActivity"
+            android:label="@string/settings_title">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.quakereport.EarthquakeActivity"/>
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
